# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-04-01 13:25:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-50

    Summary:
      xml, fix fix fix
    Revision:
      itools--main--0.8--patch-50


    new files:
     xml/.arch-ids/exceptions.py.id xml/exceptions.py

    modified files:
     Changelog handlers/IO.py html/parser.py xhtml/XHTML.py
     xml/DublinCore.py xml/XML.py xml/namespaces.py xml/parser.py


2005-03-31 18:57:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-49

    Summary:
      xml, clean namespaces programming interface
    Revision:
      itools--main--0.8--patch-49

    Now the 'itools.xml' package is completely broken.

    modified files:
     Changelog xhtml/XHTML.py xml/DublinCore.py xml/STL.py
     xml/XML.py xml/namespaces.py


2005-03-30 18:56:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-48

    Summary:
      xml, register the dublin core namespace with a prefix
    Revision:
      itools--main--0.8--patch-48


    modified files:
     Changelog xml/DublinCore.py


2005-03-30 17:51:37 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47

    Summary:
      xml, fixing
    Revision:
      itools--main--0.8--patch-47


    modified files:
     Changelog html/HTML.py html/parser.py xml/STL.py xml/XML.py
     xml/parser.py


2005-03-30 12:43:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-46

    Summary:
      xml, fix "xml" and "xmlns" namespaces
    Revision:
      itools--main--0.8--patch-46


    modified files:
     Changelog xml/namespaces.py xml/parser.py


2005-03-30 09:57:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-45

    Summary:
      html, implement parser with generators
    Revision:
      itools--main--0.8--patch-45


    new files:
     html/.arch-ids/parser.py.id html/parser.py

    modified files:
     Changelog html/HTML.py xml/STL.py xml/XML.py xml/parser.py

