@@ -75,95 +75,15 @@ class ComplexType(XML.Element):
         self._properties = {}
 
 
-    #########################################################################
-    # XXX Obsolete code, to be removed for 0.9
-    #########################################################################
+##    #########################################################################
+##    # XXX Obsolete code, to be removed for 0.9
+##    #########################################################################
 ##    def __init__(self, **kw):
 ##        schema = self.schema
 ##        for key, value in kw.items():
 ##            if key in schema:
 ##                self.set_property(key, value)
 
-
-    def encode(self, encoding='UTF-8'):
-        schema = self.schema
-        lines = []
-
-        property_names = schema.keys()
-        property_names.sort()
-        for name in property_names:
-            type, default = schema[name]
-            if name in self._properties:
-                value = self._properties[name]
-                if isinstance(value, dict):
-                    # Multilingual
-                    for language, value in value.items():
-                        if issubclass(type, IO.Unicode):
-                            value = type.encode(value, encoding)
-                        elif issubclass(type, ComplexType):
-                            value = type.encode(value, encoding)
-                        else:
-                            value = type.encode(value)
-                        lines.append('<%s lang="%s">%s</%s>\n'
-                                     % (name, language, value, name))
-                else:
-                    if isinstance(value, list):
-                        values = value
-                    else:
-                        values = [value]
-                    for value in values:
-                        if issubclass(type, IO.Unicode):
-                            value = type.encode(value, encoding)
-                        elif issubclass(type, ComplexType):
-                            value = type.encode(value, encoding)
-                        else:
-                            value = type.encode(value)
-
-                        if issubclass(type, ComplexType):
-                            lines.append('<%s>\n' % name)
-                            for line in value.splitlines():
-                                lines.append('  %s\n' % line)
-                            lines.append('</%s>\n' % name)
-                        else:
-                            lines.append('<%s>%s</%s>\n' % (name, value, name))
-        return ''.join(lines)
-
-
-    def decode(cls, node):
-        schema = cls.schema
-        property = cls(None, None, schema)
-        for node in node.get_elements():
-            name = node.name
-            # Decode the value
-            if name in schema:
-                type, default = schema[name]
-                if issubclass(type, ComplexType):
-                    value = type.decode(node)
-                else:
-                    value = XML.Children.encode(node.children)
-                    value = value.encode('utf8')
-                    try:
-                        value = type.decode(value)
-                    except ValueError:
-                        # XXX Better to log it?
-                        warnings.warn('Unable to decode "%s"' % name)
-                # The language
-                if node.has_attribute(None, 'lang'):
-                    # XXX the lang attribute should be "xml:lang", the xml
-                    # namespace should load it as an string. Then we would
-                    # not need to coerce the value to str.
-                    language = node.get_attribute(None, 'lang')
-                    language = str(language)
-                else:
-                    language = None
-                # Set property value
-                property.set_property(name, value, language=language)
-            else:
-                # XXX Maybe better to log it
-                warnings.warn('The schema does not define "%s"' % name)
-        return property
-
-    decode = classmethod(decode)
 
 
     #########################################################################
